--- a/views/admin/products/changepassword.hbs
+++ b/views/admin/products/changepassword.hbs
@@ -16,37 +16,28 @@
                             name="id" value="{{id}}">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Name</label>
-                        <input type="quanlity" class="form-control" id="exampleInputName" name="name" value="{{name}}">
-                    </div>
-                    <div class="form-group">
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" disabled class="form-control" id="exampleInputEmail" aria-describedby="emailHelp"
                             name="email" value="{{email}}">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Phone</label>
-                        <input type="number" class="form-control" id="exampleInputPhone" name="phone" value="{{phone}}">
+                        <label for="exampleInputPassword1">Old Password</label>
+                        <input type="password" class="form-control" id="exampleInputOldPass" name="oldpass">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Address</label>
-                        <input type="text" class="form-control" id="exampleInputAddress" name="address" value="{{address}}">
+                        <label for="exampleInputPassword1">New Password</label>
+                        <input type="password" class="form-control" id="exampleInputNewPass" name="newpass">
                     </div>
-
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Created</label>
-                        <input type="text" disabled class="form-control" id="exampleInputCreated" name="created" value="{{created}}">
+                        <label for="exampleInputPassword1">Retype New Password</label>
+                        <input type="password" class="form-control" id="exampleInputRenewPass" name="renewpass">
                     </div>
 
-                    <div class="form-group">
-                        <a type="button" href="/admin/changepassword">Đổi Mật Khẩu</a>
-                    </div>
-
-                    <button type="button" class="btn btn-primary" id="editAccountAdmin"  value="Update">Update</button>
+                    <button type="button" class="btn btn-primary" id="changePassAccountAdmin"  value="Update">Change PassWord</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
 
-<script src="/admin/js/account.js"></script>
+<script src="/admin/js/changepassword.js"></script>
