--- a/views/partials/frontend/sideBar.hbs
+++ b/views/partials/frontend/sideBar.hbs
@@ -13,95 +13,44 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/admin">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Tổng quan</span></a>
     </li>
 
-    <!-- Divider -->
-    <hr class="sidebar-divider">
 
-    <!-- Heading -->
-    <div class="sidebar-heading">
-        Giao diện
-    </div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
-            aria-controls="collapseTwo">
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Cài đặt</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Cài đặt:</h6>
-                <a class="collapse-item" href="buttons.html">Nút</a>
-                <a class="collapse-item" href="cards.html">Thẻ</a>
+       <!-- Heading -->
+            <div class="sidebar-heading">
+                Quản lý doanh thu
             </div>
-        </div>
-    </li>
-
-    <!-- Nav Item - Utilities Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-wrench"></i>
-            <span>Tiện ích</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Tùy chọn tiện ích:</h6>
-                <a class="collapse-item" href="utilities-color.html">Màu sắc</a>
-                <a class="collapse-item" href="utilities-border.html">Viền</a>
-                <a class="collapse-item" href="utilities-animation.html">Ảnh động</a>
-                <a class="collapse-item" href="utilities-other.html">Tùy chọn khác</a>
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/revenueReport">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Báo cáo doanh thu</span></a>
+            </li>
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Công cụ
             </div>
-        </div>
-    </li>
 
-    <!-- Divider -->
-    <hr class="sidebar-divider">
-
-    <!-- Heading -->
-    <div class="sidebar-heading">
-        Công cụ
-    </div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
-            aria-controls="collapsePages">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Trang</span>
-        </a>
-        <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Màn hình đăng nhập:</h6>
-                <a class="collapse-item" href="/admin/login">Đăng nhập</a>
-                <a class="collapse-item" href="/admin/register">Đăng kí</a>
-                <a class="collapse-item" href="/forgotPassword">Quên mật khẩu</a>
-                <div class="collapse-divider"></div>
-                {{!-- <h6 class="collapse-header">Other Pages:</h6>
-                <a class="collapse-item" href="404.html">404 Page</a>
-                <a class="collapse-item" href="blank.html">Blank Page</a> --}}
-            </div>
-        </div>
-    </li>
-
-    <!-- Nav Item - Charts -->
-    <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Biểu đồ</span></a>
-    </li>
-
-    <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Bảng</span></a>
-    </li>
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                    aria-expanded="true" aria-controls="collapsePages">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Trang</span>
+                </a>
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Màn hình đăng nhập:</h6>
+                        <a class="collapse-item" href="/admin/login">Đăng nhập</a>
+                        <a class="collapse-item" href="/admin/register">Đăng kí</a>
+                        <a class="collapse-item" href="/forgotPassword">Quên mật khẩu</a>
+                        <div class="collapse-divider"></div>
+                    </div>
+                </div>
+            </li>
 
     <hr class="sidebar-divider">
 
